# text-game

./: .gitignore  README.md  character.py  event.py  game.py  llm_client.py  pyproject.toml  region.py
support/: character.py  event.py  explore.py  gamestate.py  home_base.py  location.py  region.py
utils/: base_utils.py  llm_client.py  prompts.py  screen.py
