[project]
name = "text-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
